--- a/_posts/2020-02-10-1st-post.md
+++ b/_posts/2020-02-10-1st-post.md
@@ -3,10 +3,13 @@ title: "한국세대융합연구소 뉴스레터를 구독하세요"
 excerpt: "한국세대융합연구소는 50+세대를 위한 유용한 정보와 사회적경제 소식을 모아서 뉴스레터로 발행합니다."
 
 categories:
-- Blog
+- 뉴스레터
+- 블로그
 
 tags:
-- Blog
+- 연구소
+- 뉴스레터
+- 구독
 
 last_modified_at: 2020-02-10T18:00
 ---
