메뉴 추가 및 전반적 문구 수정

--- a/_posts/2020-02-11-newsletter11.md
+++ b/_posts/2020-02-11-newsletter11.md
@@ -1,6 +1,6 @@
 ---
 title: "한국세대융합연구소 뉴스레터 11호"
-excerpt: "한국세대융합연구소는 50+세대를 위한 유용한 정보와 사회적경제 소식 뉴스레터 11호 발행"
+excerpt: "세대내 및 세대간 일, 배움, 활동을 함께하는 정보공유 뉴스레터 11호 발행"
 
 categories:
 - 뉴스레터
@@ -14,9 +14,12 @@ tags:
 last_modified_at: 2020-02-11T09:00
 ---
 
-한국세대융합연구소는 50+ 세대의 활발한 사회 활동을 응원하며, 개개인의 경험과 지식이 사회의 유용한 자원으로 활용될 수 있도록 돕고자 합니다. 그 일환으로 사회적경제 영역의 다양한 정보 원천으로 부터 정보를 수집하여 매주 화요일과 금요일에 이메일로 발송해드리고 있습니다.
+한국세대융합연구소는 세대를 아우르는 공유와 협력 네트워크를 구축하고 지속가능한 사회적 가치를 만드는 노력의 하나로 정보공유 뉴스레터를 발행하고 있습니다. 다양한 정보 원천으로 부터 정보를 수집하여 매주 화요일과 금요일에 이메일로 발송해드리고 있습니다.
 
 * [뉴스레터 11호 : 2020-02-11](https://drive.google.com/uc?id=1UD-qhp2v3DqsU35TXHiwahIinVqATwlK){:target="_blank"}
 
 
-구독을 원하시는 분은 [여기를 눌러 구독신청](mailto:{{ site.author.email }}?subject=뉴스레터 구독 신청&body=한국세대융합연구소 뉴스레터 구독을 요청합니다.){:target="_blank"}을 하시기 바랍니다.
+### 구독을 원하시는 분은 [여기(뉴스레터 구독 신청하기)](https://forms.gle/MJ5gVHCdunBXXWVB7){:target="_blank"} 를 눌러 신청하시기 바랍니다.
+
+
+감사합니다.
