뉴스레터 20-19호 발행 추가 수정

--- a/_posts/2020-03-10-newsletter20-19.md
+++ b/_posts/2020-03-10-newsletter20-19.md
@@ -11,7 +11,7 @@ tags:
 last_modified_at: 2020-03-10T08:02
 ---
 
-한국세대융합연구소는 세대를 아우르는 공유와 협력 네트워크를 구축하고 지속가능한 사회적 가치를 만드는 노력의 하나로 정보공유 뉴스레터를 발행하고 있습니다. (html 파일)
+한국세대융합연구소는 세대를 아우르는 공유와 협력 네트워크를 구축하고 지속가능한 사회적 가치를 만드는 노력의 하나로 정보공유 뉴스레터를 발행하고 있습니다.
 
 * [뉴스레터 20-19호 : 2020-03-10](https://drive.google.com/uc?id=1WA2XTz6uSDerf4V75Ib0WEpcPRYoO6F1){:target="_blank"}
 
