뉴스레터 html 파일 추가, 경로명 변경

--- a/_posts/2020-07-21-newsletter20-57.md
+++ b/_posts/2020-07-21-newsletter20-57.md
@@ -15,9 +15,9 @@ last_modified_at: 2020-07-21T05:14
 
 이번호에는 9월 '생명밥차' 지원사업 안내, 한세연 소개 / 뉴스레터 구독 등 입찰/공모/지원사업(39건), 공지/소식/알림(114건), 일자리/채용(37건), 행사/캠페인(15건), 보도/기사(33건), 중소벤처 지원사업(126건), 총 364건의 정보를 수록하였습니다.
 
-* [뉴스레터 20-57호 html : 2020-07-21](https://gcrcenter.github.io/assets/html/gcrc_news_letter_20200721.html){:target="_blank"}
+* [뉴스레터 20-57호 (html) : 2020-07-21](https://gcrcenter.github.io/assets/htmls/gcrc_news_letter_20200721.html){:target="_blank"}
 
-* [뉴스레터 20-57호 : 2020-07-21](https://drive.google.com/uc?export=view&id=1TwBilWDfPXex1Rh_oxnTncHCrwgLRQiH){:target="_blank"}
+* [뉴스레터 20-57호 (pdf): 2020-07-21](https://drive.google.com/uc?export=view&id=1TwBilWDfPXex1Rh_oxnTncHCrwgLRQiH){:target="_blank"}
 
 
 ### 구독을 원하시는 분은 [여기(뉴스레터 구독 신청하기)](https://forms.gle/MJ5gVHCdunBXXWVB7){:target="_blank"} 를 눌러 신청하시기 바랍니다.
