--- a/_posts/2020-12-11-newsletter20-96.md
+++ b/_posts/2020-12-11-newsletter20-96.md
@@ -13,7 +13,7 @@ last_modified_at: 2020-12-11T05:17
 
 한국세대융합연구소는 세대를 아우르는 공유와 협력 네트워크를 구축하고 지속가능한 사회적 가치를 만드는 노력의 하나로 정보공유 뉴스레터를 발행하고 있습니다.
 
-이번호에는 50+일자리 특집다큐(방송안내), 노원 "아픈아이 돌봄센터"-우리 지역은? 등 입찰/공모/지원사업(35건), 공지/소식/알림(53건), 일자리/채용(33건), 행사/캠페인(9건), 보도/기사(76건), 중소벤처 지원사업(49건), 총 255건의 정보를 수록하였습니다.
+이번호에는 50+일자리 특집다큐(방송안내), 노원 &#39;아픈아이 돌봄센터&#39;-우리 지역은? 등 입찰/공모/지원사업(35건), 공지/소식/알림(53건), 일자리/채용(33건), 행사/캠페인(9건), 보도/기사(76건), 중소벤처 지원사업(49건), 총 255건의 정보를 수록하였습니다.
 
 * [뉴스레터 20-96호 (html): 2020-12-11](https://gcrcenter.github.io/assets/htmls/gcrc_news_letter_20201211.html){:target="_blank"}
 
