--- a/_posts/2021-09-07-newsletter21-66.md
+++ b/_posts/2021-09-07-newsletter21-66.md
@@ -13,7 +13,7 @@ last_modified_at: 2021-09-07T05:10
 
 한국세대융합연구소는 세대를 아우르는 공유와 협력 네트워크를 구축하고 지속가능한 사회적 가치를 만드는 노력의 하나로 정보공유 뉴스레터를 발행하고 있습니다.
 
-이번호에는 기후변화 특별기획 4부작 &#39;붉은 지구&#39;<br>(1)엔드 게임 1.5℃, 국민 10명 중 9명<br>&#39;기후위기 대응, 대선 주요 의제로 다뤄져야&#39; 등 입찰/공모/지원사업(44건), 공지/소식/알림(159건), 일자리/채용(27건), 행사/캠페인(12건), 보도/기사(74건), 중소벤처 지원사업(76건), 총 392건의 정보를 수록하였습니다.
+이번호에는 기후변화 특별기획 4부작 &#39;붉은 지구&#39;(1)엔드 게임 1.5℃, 국민 10명 중 9명&#39;기후위기 대응, 대선 주요 의제로 다뤄져야&#39; 등 입찰/공모/지원사업(44건), 공지/소식/알림(159건), 일자리/채용(27건), 행사/캠페인(12건), 보도/기사(74건), 중소벤처 지원사업(76건), 총 392건의 정보를 수록하였습니다.
 
 * [뉴스레터 21-66호 (html): 2021-09-07](https://gcrcenter.github.io/assets/htmls/gcrc_news_letter_20210907.html){:target="_blank"}
 
