--- a/_posts/2021-09-14-newsletter21-67.md
+++ b/_posts/2021-09-14-newsletter21-67.md
@@ -13,7 +13,7 @@ last_modified_at: 2021-09-14T05:10
 
 한국세대융합연구소는 세대를 아우르는 공유와 협력 네트워크를 구축하고 지속가능한 사회적 가치를 만드는 노력의 하나로 정보공유 뉴스레터를 발행하고 있습니다.
 
-이번호에는 기후변화 특별기획 4부작 &#39;붉은 지구&#39;<br>(2)침묵의 바다, 정부보다 10년 당겨…<br>&#39;탄소중립&#39; 팔걷은 천주교 등 입찰/공모/지원사업(51건), 공지/소식/알림(185건), 일자리/채용(24건), 행사/캠페인(16건), 보도/기사(81건), 중소벤처 지원사업(95건), 총 452건의 정보를 수록하였습니다.
+이번호에는 기후변화 특별기획 4부작 &#39;붉은 지구&#39;(2)침묵의 바다, 정부보다 10년 당겨…&#39;탄소중립&#39; 팔걷은 천주교 등 입찰/공모/지원사업(51건), 공지/소식/알림(185건), 일자리/채용(24건), 행사/캠페인(16건), 보도/기사(81건), 중소벤처 지원사업(95건), 총 452건의 정보를 수록하였습니다.
 
 * [뉴스레터 21-67호 (html): 2021-09-14](https://gcrcenter.github.io/assets/htmls/gcrc_news_letter_20210914.html){:target="_blank"}
 
