한국세대융합연구소뉴스레터 종간 공지 내용 수정

--- a/_posts/2022-11-07-notice.md
+++ b/_posts/2022-11-07-notice.md
@@ -18,7 +18,7 @@ last_modified_at: 2022-11-07T21:10
 
 그동안 구독자 여러분이 보여주신 성원과 관심이 있었기에 힘든 상황에서도 발행을 지속할 수 있었습니다. 고맙습니다.
 
-그나마 작은 위안이 있다면, 한국사회적기업진흥원을 비롯한 많은 기관들이 다양한 정보를 수집하고 가공하여 뉴스레터를 발행하고 있다는 점입니다. 뉴스레터 구독처와 기관, 매체 중 일부라도 소개하니 참고하시기 바랍니다.
+한국사회적기업진흥원을 비롯한 많은 기관들이 다양한 형태와 내용으로 뉴스레터를 발행하고 있습니다. 아래에 그중 일부를 소개하니 참고하시기 바랍니다.
 
 * [한국사회적기업진흥원 뉴스레터](https://page.stibee.com/subscriptions/31157){:target="_blank"}
 * [서울사회적경제지원센터 뉴스레터](https://page.stibee.com/subscriptions/28014?groupIds=82927){:target="_blank"}
